force-app/main/default/objects/Worksheet__c/Worksheet__c.object-meta.xml
<CustomObject>
    <description>PacPoint-AC120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Worksheet</label>
    <nameField>
        <label>Worksheet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Worksheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>