force-app/main/default/objects/Worksheet__c/fields/AirfareQuote1__c.field-meta.xml
<CustomField>
    <fullName>AirfareQuote1__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Airfare Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>