force-app/main/default/objects/Worksheet__c/fields/Airline10__c.field-meta.xml
<CustomField>
    <fullName>Airline10__c</fullName>
    <label>Airline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>