force-app/main/default/objects/Worksheet__c/fields/AirportHotelShuttleCost__c.field-meta.xml
<CustomField>
    <fullName>AirportHotelShuttleCost__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <label>Airport/Hotel Shuttle Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>