force-app/main/default/objects/Worksheet__c/fields/Amended__c.field-meta.xml
<CustomField>
    <fullName>Amended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-AC121819 - Created for Travel Approval phase 1</description>
    <label>Amended</label>
    <type>Checkbox</type>
</CustomField>