force-app/main/default/objects/Worksheet__c/fields/AmendedDate__c.field-meta.xml
<CustomField>
    <fullName>AmendedDate__c</fullName>
    <description>PacPoint-AC121819 - Created for Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Amended Date</label>
    <type>Date</type>
</CustomField>