force-app/main/default/objects/Worksheet__c/fields/Amount2__c.field-meta.xml
<CustomField>
    <fullName>Amount2__c</fullName>
    <inlineHelpText>Enter # of days of free lodging.</inlineHelpText>
    <label>Lunch Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>