force-app/main/default/objects/Worksheet__c/fields/Amount3__c.field-meta.xml
<CustomField>
    <fullName>Amount3__c</fullName>
    <inlineHelpText>Enter # of full days of free lodging.</inlineHelpText>
    <label>Dinner Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>