force-app/main/default/objects/Worksheet__c/fields/Amount4__c.field-meta.xml
<CustomField>
    <fullName>Amount4__c</fullName>
    <inlineHelpText>Enter # of meals provided at no cost.</inlineHelpText>
    <label>Breakfast Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>