force-app/main/default/objects/Worksheet__c/fields/Arrival_Time16__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time16__c</fullName>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>