force-app/main/default/objects/Worksheet__c/fields/Arrival_Time17__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time17__c</fullName>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>