force-app/main/default/objects/Worksheet__c/fields/Baggage_Fee_3TEXT__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Fee_3TEXT__c</fullName>
    <formula>&quot;$&quot; &amp; 
IF(
  BaggageFee3__c &gt;= 0,
  TEXT(FLOOR(BaggageFee3__c)),
  &quot;-&quot; &amp; TEXT(FLOOR(ABS(BaggageFee3__c)))
) &amp; 
&quot;.&quot; &amp; 
LPAD(TEXT(ROUND(MOD(ABS(BaggageFee3__c), 1) * 100, 0)), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baggage Fee 3TEXT</label>
    <type>Text</type>
</CustomField>