force-app/main/default/objects/Worksheet__c/fields/Breakfast_Rate__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Rate__c</fullName>
    <inlineHelpText>Breakfast $ rate from GSA website</inlineHelpText>
    <label>Breakfast Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>