force-app/main/default/objects/Worksheet__c/fields/Breakfast_Total_CONUS_2__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Total_CONUS_2__c</fullName>
    <formula>Breakfast_Rate2__c *  Amount4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakfast Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>