force-app/main/default/objects/Worksheet__c/fields/Breakfast_Total_CONUS__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Total_CONUS__c</fullName>
    <formula>Amount__c * Breakfast_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakfast Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>