force-app/main/default/objects/Worksheet__c/fields/BreakfastC__c.field-meta.xml
<CustomField>
    <fullName>BreakfastC__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Breakfast $ rate from GSA website</inlineHelpText>
    <label>Breakfast Rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>