force-app/main/default/objects/Worksheet__c/fields/BreakfastTotalD__c.field-meta.xml
<CustomField>
    <fullName>BreakfastTotalD__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <formula>BreakfastD__c *   Amount4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakfast Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>