force-app/main/default/objects/Worksheet__c/fields/BreakfastTotalDFormula__c.field-meta.xml
<CustomField>
    <fullName>BreakfastTotalDFormula__c</fullName>
    <formula>&quot;(&quot; +  TEXT(ABS(BreakfastTotalD__c)) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakfast Total D Formula</label>
    <type>Text</type>
</CustomField>