force-app/main/default/objects/Worksheet__c/fields/Car_Size1__c.field-meta.xml
<CustomField>
    <fullName>Car_Size1__c</fullName>
    <label>Car Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>