force-app/main/default/objects/Worksheet__c/fields/Car_Size2__c.field-meta.xml
<CustomField>
    <fullName>Car_Size2__c</fullName>
    <label>Car Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>