force-app/main/default/objects/Worksheet__c/fields/Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiration_Date__c</fullName>
    <description>PacPoint: Case - 00011701
Created for Doc Generation</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Card Expiration Date</label>
    <type>Date</type>
</CustomField>