force-app/main/default/objects/Worksheet__c/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <description>PacPoint: 00011701
Created for document generation</description>
    <label>Cardholder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>