force-app/main/default/objects/Worksheet__c/fields/CarRate3__c.field-meta.xml
<CustomField>
    <fullName>CarRate3__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <label>Car Rate (Price List)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>