force-app/main/default/objects/Worksheet__c/fields/CheckInDate__c.field-meta.xml
<CustomField>
    <fullName>CheckInDate__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Check In Date</label>
    <type>Date</type>
</CustomField>