force-app/main/default/objects/Worksheet__c/fields/Computation__c.field-meta.xml
<CustomField>
    <fullName>Computation__c</fullName>
    <formula>Local_Incidental_Rate__c  * Days4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incidentals Computation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>