force-app/main/default/objects/Worksheet__c/fields/Computation_of_Meal_Allowance2__c.field-meta.xml
<CustomField>
    <fullName>Computation_of_Meal_Allowance2__c</fullName>
    <formula>Meal_Rate_rounded_to_the_nearest_dollar2__c * Days2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Computation of Meal Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>