force-app/main/default/objects/Worksheet__c/fields/Computation_to_DEDUCT2__c.field-meta.xml
<CustomField>
    <fullName>Computation_to_DEDUCT2__c</fullName>
    <formula>Meal_Rate_rounded_to_the_nearest_dollar2__c *  Days6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Computation to DEDUCT Lunch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>