force-app/main/default/objects/Worksheet__c/fields/Computation_to_DEDUCT3__c.field-meta.xml
<CustomField>
    <fullName>Computation_to_DEDUCT3__c</fullName>
    <formula>Meal_Rate_rounded_to_the_nearest_dollar3__c *  Days7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Computation to DEDUCT Dinner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>