force-app/main/default/objects/Worksheet__c/fields/ConferenceHotel__c.field-meta.xml
<CustomField>
    <fullName>ConferenceHotel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Conference Hotel</label>
    <type>Checkbox</type>
</CustomField>