force-app/main/default/objects/Worksheet__c/fields/Conus_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Conus_Checkbox__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(TravelType__c, &quot;48 Contiguous States &amp; District of Columbia (CONUS)&quot;),
        ISPICKVAL(Travel_Approval__r.TravelType__c, &quot;CONUS (Contiguous 48 States)&quot;)
    ),
    &quot;X&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conus Checkbox</label>
    <type>Text</type>
</CustomField>