force-app/main/default/objects/Worksheet__c/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <description>Created by PacPoint: Case - 00011701
So that the Credit Card # will be generated on the Spring CM Generated Form.</description>
    <inlineHelpText>****-****-</inlineHelpText>
    <label>Credit Card #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>