force-app/main/default/objects/Worksheet__c/fields/Date12__c.field-meta.xml
<CustomField>
    <fullName>Date12__c</fullName>
    <description>PacPoint: 00011810
Adding additional fields for Worksheet A</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>