force-app/main/default/objects/Worksheet__c/fields/DateofQuote1__c.field-meta.xml
<CustomField>
    <fullName>DateofQuote1__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>MM/DD/YYYY</inlineHelpText>
    <label>Date of Quote</label>
    <type>Date</type>
</CustomField>