force-app/main/default/objects/Worksheet__c/fields/Days2__c.field-meta.xml
<CustomField>
    <fullName>Days2__c</fullName>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>