force-app/main/default/objects/Worksheet__c/fields/Days4__c.field-meta.xml
<CustomField>
    <fullName>Days4__c</fullName>
    <label>Incidentals Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>