force-app/main/default/objects/Worksheet__c/fields/Departure_Date2__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date2__c</fullName>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>