force-app/main/default/objects/Worksheet__c/fields/Departure_Day_2__c.field-meta.xml
<CustomField>
    <fullName>Departure_Day_2__c</fullName>
    <label>Departure Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>