force-app/main/default/objects/Worksheet__c/fields/DepartureDateOnly__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateOnly__c</fullName>
    <description>PacPoint - JF 8011 - Setup the DocuSign Template for Worksheet B Template</description>
    <formula>DateValue(DepartureDateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date Only</label>
    <type>Date</type>
</CustomField>