force-app/main/default/objects/Worksheet__c/fields/DepartureDateTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateTime__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Departure Date/Time</label>
    <type>DateTime</type>
</CustomField>