force-app/main/default/objects/Worksheet__c/fields/Dept_Date__c.field-meta.xml
<CustomField>
    <fullName>Dept_Date__c</fullName>
    <label>Dept. Date</label>
    <type>Date</type>
</CustomField>