force-app/main/default/objects/Worksheet__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <label>Destination</label>
    <length>80</length>
    <type>Text</type>
</CustomField>