force-app/main/default/objects/Worksheet__c/fields/Dinner_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Rate__c</fullName>
    <inlineHelpText>Dinner $ rate from GSA.gov</inlineHelpText>
    <label>Dinner Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>