force-app/main/default/objects/Worksheet__c/fields/Dinner_Total_CONUS_2__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Total_CONUS_2__c</fullName>
    <formula>Dinner_Rate2__c * Amount6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dinner Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>