force-app/main/default/objects/Worksheet__c/fields/Dinner_Total_CONUS__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Total_CONUS__c</fullName>
    <formula>Amount3__c * Dinner_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dinner Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>