force-app/main/default/objects/Worksheet__c/fields/DinnerD__c.field-meta.xml
<CustomField>
    <fullName>DinnerD__c</fullName>
    <description>PacPoint-JW120519 - Created for DCCA Travel Approval phase 1</description>
    <inlineHelpText>Dinner $ rate from GSA.gov</inlineHelpText>
    <label>Dinner Rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>