force-app/main/default/objects/Worksheet__c/fields/DinnerTotalC__c.field-meta.xml
<CustomField>
    <fullName>DinnerTotalC__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <formula>DinnerC__c *  Amount3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dinner Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>