force-app/main/default/objects/Worksheet__c/fields/DinnerTotalDFormula__c.field-meta.xml
<CustomField>
    <fullName>DinnerTotalDFormula__c</fullName>
    <formula>&quot;(&quot; + TEXT(ABS( DinnerTotalD__c)) + &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dinner Total D Formula</label>
    <type>Text</type>
</CustomField>