force-app/main/default/objects/Worksheet__c/fields/DropOffLocation__c.field-meta.xml
<CustomField>
    <fullName>DropOffLocation__c</fullName>
    <description>PacPoint-AC120919 - Created for DCCA Travel Approval phase 1</description>
    <label>Drop Off Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>