force-app/main/default/objects/Worksheet__c/fields/EstimatedArrivalTime12__c.field-meta.xml
<CustomField>
    <fullName>EstimatedArrivalTime12__c</fullName>
    <description>PacPoint: 00011810
Adding additional fields for Worksheet A</description>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>