force-app/main/default/objects/Worksheet__c/fields/EstimatedDepartureTime12__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDepartureTime12__c</fullName>
    <description>PacPoint: 00011810
Adding additional fields for Worksheet A</description>
    <label>Departure Time</label>
    <type>Time</type>
</CustomField>