force-app/main/default/objects/Worksheet__c/fields/ExcessLodging2__c.field-meta.xml
<CustomField>
    <fullName>ExcessLodging2__c</fullName>
    <description>PacPoint-AC121319 - Created for DCCA Travel Approval phase 1</description>
    <formula>If(

HotelRate2__c &lt;&gt; 0,

CASE(TravelType__c, &quot;Intra-State&quot;, ( HotelRate2__c - 50), &quot;Out-of-State&quot;, ( HotelRate2__c - 85),

0)
,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Lodging (Per Day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>