force-app/main/default/objects/Worksheet__c/fields/ExcessLodging__c.field-meta.xml
<CustomField>
    <fullName>ExcessLodging__c</fullName>
    <description>PacPoint-AC121219 - Created for DCCA Travel Approval phase 1</description>
    <formula>If(

HotelRate__c &lt;&gt; 0,

CASE(TravelType__c, &quot;Intra-State&quot;, ( HotelRate__c - 50), &quot;Out-of-State&quot;, ( HotelRate__c - 85),

0)
,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess Lodging (Per Day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>