force-app/main/default/objects/Worksheet__c/fields/Federal_Max_Lodging_Per_Night1__c.field-meta.xml
<CustomField>
    <fullName>Federal_Max_Lodging_Per_Night1__c</fullName>
    <label>Federal Max Lodging (Per Night)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>